# ukui-file-meta-data

./: .gitmodules  CMakeLists.txt  README.md  UkuiFileMetaDataConfig.cmake.in
autotests/: CMakeLists.txt  ffmpeg-extractortest.cpp  ffmpeg-extractortest.h  indexerextractortestsconfig.h.in  office-extractortest.cpp  office-extractortest.h  office2007-extractortest.cpp  office2007-extractortest.h  pdf-extractortest.cpp  pdf-extractortest.h  text-extractortest.cpp  text-extractortest.h
debian/: changelog  control  copyright  libukui-file-metadata-bin.install  libukui-file-metadata-dev.install  libukui-file-metadata1.install  libukui-filemetadata-bin.install  libukui-filemetadata-dev.install  libukui-filemetadata1.install  ukui-file-meta-data-dev.install  ukui-file-meta-data.install
src/: CMakeLists.txt  embedded-image-data.cpp  embedded-image-data.h  extraction-result.cpp  extraction-result.h  extractor-manager.cpp  extractor-manager.h  extractor-plugin.cpp  extractor-plugin.h  extractor.cpp  extractor.h  format-strings.cpp  format-strings_p.h  mime-utils.cpp  mime-utils.h  properties.h  property-info.cpp  property-info.h  simple-extraction-result.cpp  simple-extraction-result.h  thumbnail.cpp  thumbnail.h  type-info.cpp  type-info.h  types.h  ukui-file-metadata-config.cmake.in  ukui-file-metadata-config.h.in  ukui-file-metadata_global.h
src/extractors/: CMakeLists.txt  binary-parser.cpp  binary-parser.h  common.h  ffmpeg-extractor.cpp  ffmpeg-extractor.h  ffmpeg-extractor.json  office-extractor.cpp  office-extractor.h  office-extractor.json  office2007-extractor.cpp  office2007-extractor.h  office2007-extractor.json  pdf-extractor.cpp  pdf-extractor.h  pdf-extractor.json  text-extractor.cpp  text-extractor.h  text-extractor.json
src/pkgconfig/: UkuiFileMetaData.pc.in  ukui-file-metadata.pc.in
tests/: CMakeLists.txt  dump.cpp
